--- a/JS/02-06-string.html
+++ b/JS/02-06-string.html
@@ -7,6 +7,7 @@
         console.log(`value: ${greeting}, type: ${typeof greeting}`);
         const template = `hi ${username}!`; // template literals
         console.log(`value: ${template}, type: ${typeof template}`);
+        //console.log('value: ' + template + ', type: ' + typeof template);
 
         //string (indexing / 함수)
         const str = 'JavaScript';
