--- a/JS/03-10-time.html
+++ b/JS/03-10-time.html
@@ -1,6 +1,7 @@
 
 <body>
     <script>
+        // 현재 시각에 따라 아침/점심/저녁 출력
         // 현재 예제 시간 두 자리수 출력
         const date = new Date();
         let hour = date.getHours();
