--- a/JS/03-연습문제4.html
+++ b/JS/03-연습문제4.html
@@ -1,5 +1,6 @@
 <body>
     <script>
+        // 중첩 if를 수정하여 하나의 if만 사용하도록 수정하기(논리연산자 사용)
         let score = 50;
         let hasPortfolio = true;
         let isPass = true;
