--- a/JS/03-11-backgroundImage.html
+++ b/JS/03-11-backgroundImage.html
@@ -1,5 +1,6 @@
 <body>
     <script>
+        // 현재 시각에 따라 배경이미지 변경
         const date = new Date();
         let hour = date.getHours();
         let min = date.getMinutes();
