--- a/JS/03-연습문제6.html
+++ b/JS/03-연습문제6.html
@@ -8,6 +8,6 @@
                 total+=i;
             }
         }
-        console.log(total);
+        console.log(`2의 배수 합 => ${total}`);
     </script>
 </body>
