--- a/JS/03-연습문제2.html
+++ b/JS/03-연습문제2.html
@@ -1,11 +1,13 @@
 <body>
     <script>
-        let page=13; //280
-        let start=0;  //281
-        let end=0;  //290
+        // 백의 자리 이하 버리기 (456 → 400, 111 → 100)
+        let num1 = 456;
+        let num2 = 111;
 
-        start=parseInt(page/10)*10+1;
-        end=start+9;
-        console.log(start,end);
+        let roundedNum1 = Math.floor(num1 / 100) * 100;
+        let roundedNum2 = Math.floor(num2 / 100) * 100;
+
+        console.log(`${roundedNum1}`);
+        console.log(`${roundedNum2}`);
     </script>
 </body>
