--- a/JS/03-연습문제3.html
+++ b/JS/03-연습문제3.html
@@ -1,24 +1,10 @@
 <body>
     <script>
+        // 각 자리 숫자들의 합 구하기 (123 → 6, 745 → 16)
         let num = 12345;
 
-        // 나머지 %
-        let n5 = num % 10; //5
-        let n4 = parseInt(num / 10) % 10; //4
-        let n3 = parseInt(num / 100) % 10; //3
-
-
-        let 점수 = 78;
-        if (점수 >= 90) {  // 경우의 수가 적은 조건을 위에 배치
-            console.log('A');
-        } else if (점수 >= 80) {
-            console.log('B');
-        } else if (점수 >= 70) {
-            console.log('C');
-        } else if (점수 >= 60) {
-            console.log('D');
-        } else {
-            console.log('F');
-        }
+        // 숫자를 문자열로 변환 후 각 자리 숫자를 배열로 만들어 합산
+        let sum = num.toString().split('').reduce((acc, digit) => acc + Number(digit), 0);
+        console.log(`${sum}`);
     </script>
 </body>
