--- a/JS/07-연습문제1.html
+++ b/JS/07-연습문제1.html
@@ -12,6 +12,9 @@
 
     h1.addEventListener('click', ()=>{
         count+=1;
-        h3.textContent=`클릭 횟수: ${count}`;
+        // h3.textContent=`<h1>1</h1>클릭 횟수: ${count}`;
+        // h3.innerText=`<h1>1</h1>클릭 횟수: ${count}`;
+
+        h3.innerHTML=`<h1>1</h1>클릭 횟수: ${count}`;
     });
 </script>
