--- a/JS/07-연습문제4-1.html
+++ b/JS/07-연습문제4-1.html
@@ -1,4 +1,5 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- checkbox 값도 알아내기 -->
 
 <body>
     <div class="container mt-33">
@@ -86,6 +87,14 @@
                 //console.dir(v);
             });  // 콜백함수
             console.log(radioValue);
+
+            let checkedValues = [];
+            checks.forEach((v) => {
+                if (v.checked) {
+                    checkedValues.push(v.value);
+                }
+            });
+            console.log(checkedValues.join(", "));
         });
     </script>
 </body>
